@@ -434,6 +434,10 @@ Working version
 - GPR#2076: Add [Targetint.print].
   (Mark Shinwell)
 
+- GPR#2080: Add [Proc.dwarf_register_numbers] and
+  [Proc.stack_ptr_dwarf_register_number].
+  (Mark Shinwell)
+
 - GPR#2081: Mark [Iname_for_debugger] as an impure operation.
   (Mark Shinwell)
 
